--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 	},
 	"devDependencies": {
 		"@floating-ui/dom": "^1.5.1",
-		"@skeletonlabs/skeleton": "^1.11.0",
+		"@skeletonlabs/skeleton": "^2.0.0-rc.1",
+		"@skeletonlabs/tw-plugin": "^0.1.0-rc.5",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.4",
+		"@types/node": "^20.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
